# GESCIT-API/app/controllers/Catalogs/DriversController.js
@@ -2,7 +2,9 @@ const DriversDao = require('../../models/Catalogs/DriversDao');
 
 module.exports = {
   addOrUpdateDriverHandler: async (req, res) => {
-    // #swagger.tags = ['Catálogos']
+    // #swagger.tags = ['Catálogos/Choferes']
+    // #swagger.summary = 'Agregar o actualizar un conductor.'
+    // #swagger.description = 'Endpoint para agregar o actualizar un conductor.'
     try {
       const { Driver } = req.body;
       const result = await DriversDao.addOrUpdateDriver(Driver);
@@ -13,7 +15,9 @@ module.exports = {
     }
   },
   GetDriversHandler: async (req, res) => {
-    // #swagger.tags = ['Catálogos']
+    // #swagger.tags = ['Catálogos/Choferes']
+    // #swagger.summary = 'Obtener conductores.'
+    // #swagger.description = 'Endpoint para obtener conductores.'
     try {
       const { UserId } = req.body;
       const result = await DriversDao.GetDrivers(UserId);
