# GESCIT-API/app/controllers/Catalogs/TransportController.js
@@ -2,7 +2,9 @@ const TransportDao = require('../../models/Catalogs/TransportDao');
 
 module.exports = {
   addOrUpdateTransport: async (req, res) => {
-    // #swagger.tags = ['Catálogos']
+    // #swagger.tags = ['Catálogos/Transportes']
+    // #swagger.summary = 'Agregar o actualizar un transporte.'
+    // #swagger.description = 'Endpoint para agregar o actualizar un transporte.'
     try {
       const { Transport } = req.body;
       const response = await TransportDao.addOrUpdateTransport(Transport);
@@ -18,7 +20,9 @@ module.exports = {
   },
 
   getTransports: async (req, res) => {
-    // #swagger.tags = ['Catálogos']
+    // #swagger.tags = ['Catálogos/Transportes']
+    // #swagger.summary = 'Obtener transportes.'
+    // #swagger.description = 'Endpoint para obtener transportes.'
     try {
       let { userId } = req.body;
       userId = userId === undefined ? 0 : userId;
@@ -30,7 +34,9 @@ module.exports = {
   },
 
   getTransportType: async (req, res) => {
-    // #swagger.tags = ['Catálogos']
+    // #swagger.tags = ['Catálogos/Transportes']
+    // #swagger.summary = 'Obtener tipos de transporte.'
+    // #swagger.description = 'Endpoint para obtener tipos de transporte.'
     try {
       const response = await TransportDao.getTransportType();
       res.json(response);
