# GESCIT-API/app/controllers/Catalogs/TransportLineController.js
@@ -2,7 +2,9 @@ const TransportLineDao = require('../../models/Catalogs/TransportLineDao');
 
 module.exports = {
 	async addOrUpdateTransportLineHandler(req, res) {
-		// #swagger.tags = ['Catálogos']
+		// #swagger.tags = ['Catálogos/Lineas de Transporte']
+		// #swagger.summary = 'Agregar o actualizar una linea de transporte.'
+		// #swagger.description = 'Endpoint para agregar o actualizar una linea de transporte.'
 		try {
 			const { TransportLine } = req.body;
 			const result = await TransportLineDao.addOrUpdateTransportLine(TransportLine);
@@ -13,7 +15,9 @@ module.exports = {
 	},
 
 	async getTransportLinesHandler(req, res) {
-		// #swagger.tags = ['Catálogos']
+		// #swagger.tags = ['Catálogos/Lineas de Transporte']
+		// #swagger.summary = 'Obtener lineas de transporte.'
+		// #swagger.description = 'Endpoint para obtener lineas de transporte.'
 		try {
 			const { userId } = req.body;
 			const transportLines = await TransportLineDao.getTransportLines(userId);
@@ -25,7 +29,9 @@ module.exports = {
 	},
 
 	async getTransportLineTypesHandler(req, res) {
-		// #swagger.tags = ['Catálogos']
+		// #swagger.tags = ['Catálogos/Lineas de Transporte']
+		// #swagger.summary = 'Obtener tipos de linea de transporte.'
+		// #swagger.description = 'Endpoint para obtener tipos de linea de transporte.'
 		try {
 			const transportLines = await TransportLineDao.getTransportLineTypes();
 			res.json(transportLines);
