# GESCIT-API/app/controllers/Configuration/LoginController.js
@@ -6,7 +6,7 @@ const CryptoController = require('./CryptoController');
 
 module.exports = {
   async validateUser(req, res) {
-    // #swagger.tags = ['Configuración']
+    // #swagger.tags = ['Configuración/Usuario']
     try {
       const { username, password } = req.body;
 
@@ -74,7 +74,7 @@ module.exports = {
   },
 
   UserPrivacyNoticeHandler: async (req, res) => {
-    // #swagger.tags = ['Configuración'/Usuario]
+    // #swagger.tags = ['Configuración/Usuario']
     try {
       const { userId } = req.body;
       const response = await LoginDao.UserPrivacyNotice(userId);
@@ -97,7 +97,7 @@ module.exports = {
   },
 
   getUserData: async (req, res) => {
-    // #swagger.tags = ['Configuración']
+    // #swagger.tags = ['Configuración/Usuario']
     try {
       const { userId } = req.body;
       const userRole = await LoginDao.getUserRole(userId);
@@ -125,7 +125,7 @@ module.exports = {
   },
 
   ResetPassowrdHandler: async (req, res) => {
-    // #swagger.tags = ['Configuración']
+    // #swagger.tags = ['Configuración/Usuario']
     try {
       const { userResetPassword, emailResetPassword } = req.body;
       const MailExists = await LoginDao.ValidateUserEmail(userResetPassword, emailResetPassword);
@@ -150,7 +150,7 @@ module.exports = {
   },
 
   ChangePasswordHandler: async (req, res) => {
-    // #swagger.tags = ['Configuración']
+    // #swagger.tags = ['Configuración/Usuario']
     try {
       const { token, user, email, NewPassword, ConfirmedNewPassword } = req.body;
       let response = await LoginDao.ValidateChangePassword(user, email, token, NewPassword, ConfirmedNewPassword);
